--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <title>Chat</title>
+    <link rel="stylesheet" href="stylesheets/style.css">
   </head>
   <body>
-
+    
+    <h1>Enter Your Name:</h1>
     <form>
       <input type="text" name="name" placeholder="Enter your name" />
       <button type="submit">Submit</button>
